[package]
name = "sui-execution"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Multiplexer to choose between multiple versions of sui and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-protocol-config.workspace = true
sui-types.workspace = true

move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-trace-format.workspace = true
move-vm-config.workspace = true

sui-adapter-latest = { workspace = true }
sui-adapter-v0 = { workspace = true }
sui-adapter-v1 = { workspace = true }
sui-adapter-v2 = { workspace = true }
# sui-adapter-$CUT = { path = "$CUT/sui-adapter" }
sui-move-natives-latest = { workspace = true }
sui-move-natives-v0 = { workspace = true }
sui-move-natives-v1 = { workspace = true }
sui-move-natives-v2 = { workspace = true }
# sui-move-natives-$CUT = { path = "$CUT/sui-move-natives" }
sui-verifier-latest = { workspace = true }
sui-verifier-v0 = { workspace = true }
sui-verifier-v1 = { workspace = true }
sui-verifier-v2 = { workspace = true }
# sui-verifier-$CUT = { path = "$CUT/sui-verifier" }

move-abstract-interpreter-latest = { workspace = true }
move-abstract-interpreter-v2 = { workspace = true }
# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { workspace = true }
move-bytecode-verifier-v1 = { workspace = true }
move-bytecode-verifier-v2 = { workspace = true }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { workspace = true }
move-vm-runtime-v1 = { workspace = true }
move-vm-runtime-v2 = { workspace = true }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }

[dev-dependencies]
cargo_metadata = { workspace = true }
petgraph = { workspace = true }

[features]
default = []
tracing = [
    "sui-adapter-latest/tracing",
    "sui-adapter-v0/tracing",
    "sui-adapter-v1/tracing",
  "sui-adapter-v2/tracing",
#   "sui-adapter-$CUT/tracing",
    "move-vm-runtime-v0/tracing",
    "move-vm-runtime-v1/tracing",
    "move-vm-runtime-latest/tracing",
  "move-vm-runtime-v2/tracing",
#   "move-vm-runtime-$CUT/tracing",
    "move-vm-config/tracing",
]
