[package]
name = "sui"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rayon = "1.5.2"
anyhow = { version = "1.0.57", features = ["backtrace"] }
bytes = "1.1.0"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.8.4"
toml = "0.5.9"
strum = "0.24.0"
strum_macros = "0.24.0"
num_cpus = "1.13.1"
base64ct = { version = "1.5.0", features = ["alloc"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
rocksdb = "0.18.0"
hex = "0.4.3"
async-trait = "0.1.53"
serde_with = { version = "1.13.0", features = ["hex"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["time", "registry", "env-filter"] }
serde-value = "0.7.0"
serde-name = "0.2.0"
dirs = "4.0.0"
clap = { version = "3.1.8", features = ["derive"] }
telemetry_subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "a45af6dc28aa12c8cc13521d118c24aadd4c6adf" }

bcs = "0.1.3"
sui_core = { path = "../sui_core" }
sui-adapter = { path = "../sui_programmability/adapter" }
sui-framework = { path = "../sui_programmability/framework" }
sui-network = { path = "../network_utils" }
sui-types = { path = "../sui_types" }
sui-verifier = { path = "../sui_programmability/verifier" }
sui-open-rpc = { path = "open_rpc" }
sui-open-rpc-macros = { path = "open_rpc/macros" }

rustyline = "9.1.2"
rustyline-derive = "0.6.0"
colored = "2.0.0"
unescape = "0.1.0"

# Deps for rest server
dropshot = "0.6.0"
http = "0.2.6"
hyper = "0.14.18"
schemars = "0.8.8"

move-package = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc" }
move-core-types = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc", features = ["address20"] }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "4e025186af502c931318884df53c11bf34a664bc" }

narwhal-node = { git = "https://github.com/MystenLabs/narwhal", rev = "8ae2164f0510349cbac2770e50e853bce5ab0e02", package = "node" }
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "8ae2164f0510349cbac2770e50e853bce5ab0e02", package = "config" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "8ae2164f0510349cbac2770e50e853bce5ab0e02", package = "crypto" }

once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json", "serde_json", "blocking"] }

jsonrpsee = { version = "0.11.0", features = ["full"] }
jsonrpsee-proc-macros = "0.11.0"

[dev-dependencies]
tracing-test = "0.2.1"
pretty_assertions = "1.2.0"
tokio-util = { version = "0.7.1", features = ["codec"] }

test_utils = { path = "../test_utils" }
sui-network = { path = "../network_utils" }

[features]
benchmark = ["narwhal-node/benchmark"]

[[example]]
name = "generate-json-rpc-spec"
path = "src/generate_json_rpc_spec.rs"
test = false
