[package]
name = "sui"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rayon = "1.5.2"
anyhow = { version = "1.0.57", features = ["backtrace"] }
bytes = "1.1.0"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tempfile = "3.3.0"
tokio = { version = "1.18.2", features = ["full"] }
rand = "0.7.3"
toml = "0.5.9"
strum = "0.24.0"
strum_macros = "0.24.0"
num_cpus = "1.13.1"
base64ct = { version = "1.5.0", features = ["alloc"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
rocksdb = "0.18.0"
hex = "0.4.3"
async-trait = "0.1.53"
serde_with = { version = "1.13.0", features = ["hex"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["time", "registry", "env-filter"] }
serde-value = "0.7.0"
serde-name = "0.2.0"
dirs = "4.0.0"
clap = { version = "3.1.17", features = ["derive"] }
telemetry-subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe" }
prometheus_exporter = "0.8.4"
multiaddr = "0.14.0"
mysten-network = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe" }

bcs = "0.1.3"
sui_core = { path = "../sui_core" }
sui-adapter = { path = "../sui_programmability/adapter" }
sui-framework = { path = "../sui_programmability/framework" }
sui-network = { path = "../crates/sui-network" }
sui-config = { path = "../crates/sui-config" }
sui-types = { path = "../crates/sui-types" }
sui-verifier = { path = "../sui_programmability/verifier" }
sui-open-rpc = { path = "open_rpc" }
sui-open-rpc-macros = { path = "open_rpc/macros" }

rustyline = "9.1.2"
rustyline-derive = "0.6.0"
colored = "2.0.0"
unescape = "0.1.0"

move-package = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-core-types = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b", features = ["address20"] }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }

narwhal-node = { git = "https://github.com/MystenLabs/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "node" }
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "config" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "crypto" }

once_cell = "1.10.0"

jsonrpsee = { version = "0.13.1", features = ["full"] }
jsonrpsee-proc-macros = "0.13.1"
jsonrpsee-core = "0.13.1"
schemars = "0.8.8"
shell-words = "1.1.0"

[dev-dependencies]
tracing-test = "0.2.1"
pretty_assertions = "1.2.0"
tokio-util = { version = "0.7.2", features = ["codec"] }

test_utils = { path = "../test_utils" }

[features]
benchmark = ["narwhal-node/benchmark"]

[[example]]
name = "generate-json-rpc-spec"
path = "src/generate_json_rpc_spec.rs"
test = false
