[package]
name = "sui_core"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.18.0"
anyhow = { version = "1.0.57", features = ["backtrace"] }
bcs = "0.1.3"
futures = "0.3.21"
rand = "0.7.3"
bytes = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
hex = "0.4.3"
tokio = { version = "1.18.2", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.8", features = ["sync", "net"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
parking_lot = "0.12.0"
itertools = "0.10.3"
async-trait = "0.1.53"
tempfile = "3.3.0"
tracing = { version = "0.1.34", features = ["log"] }
signature = "1.5.0"
ed25519-dalek = "1.0.1"
scopeguard = "1.1.0"
clap = { version = "3.1.17", features = ["derive"] }
bincode = "1.3.3"
fdlimit = "0.2.1"
schemars = "0.8.8"
multiaddr = "0.14.0"
mysten-network = { git = "https://github.com/MystenLabs/mysten-infra", rev = "3b7daedf91fd8937dde26e905b8114cac459b866" }

sui-adapter = { path = "../sui_programmability/adapter" }
sui-framework = { path = "../sui_programmability/framework" }
sui-network = { path = "../crates/sui-network" }
sui-types = { path = "../sui_types" }

move-binary-format = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-core-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5", features = ["address20"] }
move-package = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }

typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe"}

narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "a188b870eb1a4b601a58e5744290b7d56ccd4039", package = "executor" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "a188b870eb1a4b601a58e5744290b7d56ccd4039", package = "types" }

[dev-dependencies]
serde-reflection = "0.3.5"
serde_yaml = "0.8.23"
pretty_assertions = "1.2.1"
temp_testdir = "0.2.3"
hex = "0.4.3"
tracing-test = "0.2.1"

test_utils = { path = "../test_utils" }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false
