[package]
name = "sui_core"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.18.0"
anyhow = { version = "1.0.57", features = ["backtrace"] }
bcs = "0.1.3"
futures = "0.3.21"
rand = "0.7.3"
bytes = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.13.0"
hex = "0.4.3"
tokio = { version = "1.18.2", features = ["full", "tracing", "test-util"] }
tokio-stream = { version = "0.1.8", features = ["sync", "net"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
parking_lot = "0.12.0"
itertools = "0.10.3"
async-trait = "0.1.53"
tempfile = "3.3.0"
tracing = { version = "0.1.34", features = ["log"] }
signature = "1.5.0"
ed25519-dalek = "1.0.1"
scopeguard = "1.1.0"
clap = { version = "3.1.17", features = ["derive"] }
bincode = "1.3.3"
fdlimit = "0.2.1"
schemars = "0.8.10"
multiaddr = "0.14.0"
mysten-network = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe" }
prometheus_exporter = "0.8.4"
once_cell = "1.11.0"
colored = "2.0.0"
curve25519-dalek = { version = "3", default-features = false }
thiserror = "1.0.30"
arc-swap = "1.5.0"


sui-adapter = { path = "../crates/sui-adapter" }
sui-framework = { path = "../sui_programmability/framework" }
sui-network = { path = "../crates/sui-network" }
sui-types = { path = "../crates/sui-types" }
sui_storage = { path = "../sui_storage" }
sui-config = { path = "../crates/sui-config" }
sui-json = { path = "../crates/sui-json" }

move-binary-format = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-core-types = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b", features = ["address20"] }
move-package = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b" }

typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe"}

narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "2c5e8236c0702a3ff47dd769c2bbc94b029bf4a9", package = "executor" }
narwhal-types = { git = "https://github.com/MystenLabs/narwhal", rev = "2c5e8236c0702a3ff47dd769c2bbc94b029bf4a9", package = "types" }
narwhal-node = { git = "https://github.com/MystenLabs/narwhal", rev = "2c5e8236c0702a3ff47dd769c2bbc94b029bf4a9", package = "node" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "2c5e8236c0702a3ff47dd769c2bbc94b029bf4a9", package = "crypto" }

[dev-dependencies]
serde-reflection = "0.3.6"
serde_yaml = "0.8.23"
pretty_assertions = "1.2.1"
temp_testdir = "0.2.3"
hex = "0.4.3"
tracing-test = "0.2.1"
tracing-subscriber = "^0.3"

test-fuzz = "3.0.2"
test_utils = { path = "../test_utils" }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false
