[package]
name = "sui_storage"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.55"
futures = "0.3.21"
flexstr = "^0.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full", "tracing"] }
rocksdb = "0.18.0"
tracing = { version = "0.1.31", features = ["log"] }

sui-types = { path = "../crates/sui-types" }

typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe"}

move-core-types = { git = "https://github.com/move-language/move", rev = "1b2d3b4274345f5b4b6a1a1bde5aee452003ab5b", features = ["address20"] }

[dev-dependencies]
pretty_assertions = "1.2.0"
tracing-subscriber = "0.3.9"
