[package]
name = "sui-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
bcs = "0.1.3"
bincode = "1.3.3"
itertools = "0.10.3"
once_cell = "1.9.0"
rand = "0.7.3"
serde = { version = "1.0.136", features = ["derive"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
serde-name = "0.2.0"
sha3 = "0.9"
thiserror = "1.0.30"
hex = "0.4.3"
serde_bytes = "0.11.5"
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["base64", "hex"] }
signature = "1.5.0"
static_assertions = "1.1.0"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
parking_lot = "0.12.0"
base64ct = { version = "1.5.0", features = ["alloc"] }
async-trait = "0.1.53"

name_variant = { git = "https://github.com/MystenLabs/mysten-infra", rev = "97a056f85555fa2afe497d6abb7cf6bf8faa63cf" }
typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "e44bca4513a6ff6c97399cd79e82e4bc00571ac3" }

move-binary-format = { git = "https://github.com/move-language/move", rev = "2e7c37edada44436805e047dd26724a26c07635a" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "2e7c37edada44436805e047dd26724a26c07635a" }
move-core-types = { git = "https://github.com/move-language/move", rev = "2e7c37edada44436805e047dd26724a26c07635a", features = ["address20"] }
move-disassembler = { git = "https://github.com/move-language/move", rev = "2e7c37edada44436805e047dd26724a26c07635a" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "2e7c37edada44436805e047dd26724a26c07635a" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "2e7c37edada44436805e047dd26724a26c07635a" }
narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "cf0cd2873e8e8d15c4e393f0a9b75a178d661069", package = "executor" }

sha2 = "0.10.2"