[package]
name = "sui-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
bcs = "0.1.3"
bincode = "1.3.3"
itertools = "0.10.3"
once_cell = "1.10.0"
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
serde-name = "0.2.0"
sha3 = "0.10.1"
thiserror = "1.0.31"
hex = "0.4.3"
serde_bytes = "0.11.6"
serde_json = "1.0.80"
serde_with = { version = "1.13.0", features = ["base64", "hex"] }
signature = "1.5.0"
static_assertions = "1.1.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
base64ct = { version = "1.5.0", features = ["alloc"] }
sha2 = "0.10.2"
zeroize = "1.5.4"
hkdf = "0.12.3"
digest = "0.10.3"
schemars ="0.8.8"
tonic = "0.7"

name-variant = { git = "https://github.com/MystenLabs/mysten-infra", rev = "3b7daedf91fd8937dde26e905b8114cac459b866" }
typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "3b7daedf91fd8937dde26e905b8114cac459b866" }

move-binary-format = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-core-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5", features = ["address20"] }
move-disassembler = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }

narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "72efe71f0615f91f861cc658e031b763ba30fd5b", package = "executor" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "72efe71f0615f91f861cc658e031b763ba30fd5b", package = "crypto" }
