[package]
name = "sui-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
bcs = "0.1.3"
bincode = "1.3.3"
itertools = "0.10.3"
once_cell = "1.10.0"
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
serde-name = "0.2.0"
sha3 = "0.10.1"
thiserror = "1.0.31"
hex = "0.4.3"
serde_bytes = "0.11.6"
serde_json = "1.0.80"
serde_with = { version = "1.13.0", features = ["base64", "hex"] }
signature = "1.5.0"
static_assertions = "1.1.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
base64ct = { version = "1.5.0", features = ["alloc"] }
sha2 = "0.10.2"
zeroize = "1.5.4"
hkdf = "0.12.3"
digest = "0.10.3"
schemars ="0.8.8"
tonic = "0.7"

name-variant = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe" }
typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "7c247967e5a5abd59ecaa75bc62b05bcdf4503fe" }

move-binary-format = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888" }
move-core-types = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888", features = ["address20"] }
move-disassembler = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888" }

narwhal-executor = { git = "https://github.com/MystenLabs/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "executor" }
narwhal-crypto = { git = "https://github.com/MystenLabs/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "crypto" }
