[package]
name = "sui-utils"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tracing = { version = "0.1.31", features = ["log"] }
telemetry_subscribers = { git = "https://github.com/MystenLabs/mysten-infra", rev = "c7ff7ac8849011ad5d00ab7be86773ffa05f11f7" }
