[package]
name = "test_utils"
authors = ["Mysten Labs <build@mystenlabs.com>"]
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["sync", "rt"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.52"
rand = "0.7.3"
rocksdb = "0.18.0"
tracing = { version = "0.1.31", features = ["log"] }
tempfile = "3.3.0"
bcs = "0.1.3"

sui-adapter = { path = "../sui_programmability/adapter" }
move-core-types = { git = "https://github.com/move-language/move", rev = "6a80792ecbf16d74bf1d57e48a576377f0879646", features = ["address20"] }
typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev ="e44bca4513a6ff6c97399cd79e82e4bc00571ac3"}
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "8ae2164f0510349cbac2770e50e853bce5ab0e02", package = "config" }

sui-types = { path = "../sui_types" }
sui_core = { path = "../sui_core" }
sui-network = { path = "../network_utils" }
sui = { path = "../sui" }