[package]
name = "test_utils"
authors = ["Mysten Labs <build@mystenlabs.com>"]
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["sync", "rt"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
rand = "0.7.3"
rocksdb = "0.18.0"
tracing = { version = "0.1.34", features = ["log"] }
tempfile = "3.3.0"
bcs = "0.1.3"

sui-adapter = { path = "../sui_programmability/adapter" }
sui-framework = { path = "../sui_programmability/framework" }
move-package = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-core-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5", features = ["address20"] }
typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev ="d2976a45420147ad821baae96e6fe4b12215f743"}
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "72efe71f0615f91f861cc658e031b763ba30fd5b", package = "config" }

sui-types = { path = "../sui_types" }
sui_core = { path = "../sui_core" }
sui-network = { path = "../crates/sui-network" }
sui = { path = "../sui" }
