[package]
name = "test_utils"
authors = ["Mysten Labs <build@mystenlabs.com>"]
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["sync", "rt"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
rand = "0.7.3"
rocksdb = "0.18.0"
tracing = { version = "0.1.34", features = ["log"] }
tempfile = "3.3.0"
bcs = "0.1.3"

sui-adapter = { path = "../sui_programmability/adapter" }
sui-framework = { path = "../sui_programmability/framework" }
move-package = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888" }
move-core-types = { git = "https://github.com/move-language/move", rev = "8958b40e97a4f94a588e5365fdb90ec18f00d888", features = ["address20"] }
typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev ="3b7daedf91fd8937dde26e905b8114cac459b866"}
narwhal-config = { git = "https://github.com/MystenLabs/narwhal", rev = "23745f48103656eae4a4205d0b3edd53ad8894de", package = "config" }

sui-types = { path = "../sui_types" }
sui_core = { path = "../sui_core" }
sui-network = { path = "../crates/sui-network" }
sui = { path = "../sui" }
