[package]
name = "consensus-config"
version.workspace = true
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
fastcrypto.workspace = true
mysten-network.workspace = true
rand.workspace = true
serde.workspace = true
shared-crypto.workspace = true

[dev-dependencies]
insta.workspace = true
