[package]
name = "consensus-config"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
fastcrypto.workspace = true
mysten-network.workspace = true
rand.workspace = true
serde.workspace = true
shared-crypto.workspace = true

[dev-dependencies]
insta.workspace = true
