[package]
name = "consensus-core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
consensus-config.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
mysten-metrics.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
sui-protocol-config.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-store.workspace = true

workspace-hack.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true
