[package]
name = "consensus-core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
consensus-config.workspace = true
dashmap.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
futures.workspace = true
http.workspace = true
itertools.workspace = true
quinn-proto.workspace = true
mockall.workspace = true
mysten-common.workspace = true
mysten-metrics.workspace = true
mysten-network.workspace = true
nom = "7.1.3"
parking_lot.workspace = true
prometheus.workspace = true
prost.workspace = true
rand.workspace = true
rustls.workspace = true
serde.workspace = true
shared-crypto.workspace = true
strum_macros.workspace = true
sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-tls.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
typed-store.workspace = true
tonic-rustls.workspace = true
sui-http.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true

[build-dependencies]
anemo-build.workspace = true
tonic-build.workspace = true
