[package]
name = "anemo-cli"
version = "0.0.0"
authors = ["Andrew Schran <aschran@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
futures = "0.3.21"
ron = "0.8.0"

anemo-cli.workspace = true
narwhal-types = { path = "../../narwhal/types" }
sui-network = { path = "../sui-network" }
sui-types = { path = "../sui-types" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
tokio = { workspace = true, features = ["full"] }
